; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_refcnt.c_os_ref_release_explicit.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/os/extr_refcnt.c_os_ref_release_explicit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.os_refcnt = type { i32, %struct.os_refgrp* }
%struct.os_refgrp = type { i32 }

@REFLOG_RELEASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @os_ref_release_explicit(%struct.os_refcnt* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.os_refcnt*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store %struct.os_refcnt* %0, %struct.os_refcnt** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.os_refcnt*, %struct.os_refcnt** %4, align 8
  %9 = getelementptr inbounds %struct.os_refcnt, %struct.os_refcnt* %8, i32 0, i32 0
  %10 = load i32, i32* %5, align 4
  %11 = call i64 @atomic_fetch_sub_explicit(i32* %9, i32 1, i32 %10)
  store i64 %11, i64* %7, align 8
  %12 = load %struct.os_refcnt*, %struct.os_refcnt** %4, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32 @os_ref_check_underflow(%struct.os_refcnt* %12, i64 %13)
  %15 = load i64, i64* %7, align 8
  %16 = add nsw i64 %15, -1
  store i64 %16, i64* %7, align 8
  %17 = icmp eq i64 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i64 @__improbable(i32 %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %3
  %22 = load %struct.os_refcnt*, %struct.os_refcnt** %4, align 8
  %23 = getelementptr inbounds %struct.os_refcnt, %struct.os_refcnt* %22, i32 0, i32 0
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @atomic_load_explicit(i32* %23, i32 %24)
  br label %26

26:                                               ; preds = %21, %3
  %27 = load i64, i64* %7, align 8
  ret i64 %27
}

declare dso_local i64 @atomic_fetch_sub_explicit(i32*, i32, i32) #1

declare dso_local i32 @os_ref_check_underflow(%struct.os_refcnt*, i64) #1

declare dso_local i64 @__improbable(i32) #1

declare dso_local i32 @atomic_load_explicit(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
